Fix headless mode under the MacV2Sandbox.

- The standalone headless_shell needs to invoke the Seatbelt server
  in its child processes.
- The --headless flag in Chrome needs to set up the CHILD_PROCESS_EXE
  override for finding the Helper.app. The --headless flag was incorrectly
  spawning the main app executable rather than the helper.

Bug: 866606, 689306
Change-Id: I0e4fec109fad5577263059fd0b62dea3bb966860
Reviewed-on: https://chromium-review.googlesource.com/1148478
Reviewed-by: David Vallet <dvallet@chromium.org>
Reviewed-by: Nico Weber <thakis@chromium.org>
Commit-Queue: Robert Sesek <rsesek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577949}